--- a/frontend/warehouse-management/src/app/common-ui/main-page-sidebar/main-page-sidebar.html
+++ b/frontend/warehouse-management/src/app/common-ui/main-page-sidebar/main-page-sidebar.html
@@ -1,6 +1,15 @@
+<h2 class="page-header-title">Управление складом</h2>
+
+<h2 class="page-title">Склад</h2>
 <nav class="nav">
   <ul>
-    <li routerLink="/receipt-documents" routerLinkActive="active">Документы поступления</li>
+    <li routerLink="/receipt-documents" routerLinkActive="active">Поступления</li>
+  </ul>
+</nav>
+
+<h2 class="page-title">Справочники</h2>
+<nav class="nav">
+  <ul>
     <li routerLink="/resources" routerLinkActive="active">Ресурсы</li>
     <li routerLink="/units" routerLinkActive="active">Единицы измерения</li>
   </ul>
