--- a/frontend/warehouse-management/src/app/pages/resource-details/resource-details.scss
+++ b/frontend/warehouse-management/src/app/pages/resource-details/resource-details.scss
@@ -8,3 +8,15 @@
 .resource-form * { 
   box-sizing: border-box;
 }
+
+.resource-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.actions {
+  display: flex;
+  gap: 10px;
+}
