--- a/frontend/warehouse-management/src/app/pages/receipt-documents/receipt-documents.html
+++ b/frontend/warehouse-management/src/app/pages/receipt-documents/receipt-documents.html
@@ -1,1 +1,83 @@
-<p>receipt-documents works!</p>
+<h2 class="h2">Поступления</h2>
+
+<form class="filters-form" [formGroup]="filterForm" (ngSubmit)="applyFilters()">
+  <label class="wm-control-label mb16">
+    Дата с
+    <input class="wm-input" type="date" formControlName="dateFrom" />
+  </label>
+  <label class="wm-control-label mb16">
+    Дата по
+    <input class="wm-input" type="date" formControlName="dateTo" />
+  </label>
+
+  <label class="wm-control-label mb16">
+    Номер поступления
+    <select multiple class="wm-select" formControlName="documentNumbers">
+      <option value="">Все</option>
+      <option *ngFor="let n of numbers" [value]="n">{{n}}</option>
+    </select>
+  </label>
+
+  <label class="wm-control-label mb16">
+    Ресурс
+    <select multiple class="wm-select" formControlName="resourceIds">
+      <option value="">Все</option>
+      <option *ngFor="let r of resources" [value]="r.id">{{ r.name }}</option>
+    </select>
+  </label>
+
+  <label class="wm-control-label mb16">
+    Единица измерения
+    <select multiple class="wm-select" formControlName="unitIds">
+      <option value="">Все</option>
+      <option *ngFor="let u of units" [value]="u.id">{{ u.name }}</option>
+    </select>
+  </label>
+
+  <div class="actions mt16">
+    <button class="btn" type="submit">Применить</button>
+    <button class="btn btn-shadow" [routerLink]="['/receipt-documents/create']">Добавить</button>
+  </div>
+</form>
+
+<div *ngIf="errorMessage" class="error-box">{{ errorMessage }}</div>
+<div *ngIf="loading">Загрузка...</div>
+
+<table class="mt32" *ngIf="!loading && documents.length > 0">
+  <thead>
+    <tr>
+      <th>Номер</th>
+      <th>Дата создания</th>
+      <th>Ресурс</th>
+      <th>Единица измерения</th>
+      <th>Количество</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let d of documents">
+      <td><a [routerLink]="['/receipt-documents', d.id]">{{ d.number }}</a></td>
+      <td>{{ d.createdAt | date: 'dd.MM.yyyy' }}</td>
+
+      <td>
+        <span *ngFor="let r of d.receiptResources; let last = last">
+          {{ r.resourceName }}<span *ngIf="!last"><br /></span>
+        </span>
+      </td>
+
+      <td>
+        <span *ngFor="let r of d.receiptResources; let last = last">
+          {{ r.unitName }}<span *ngIf="!last"><br /></span>
+        </span>
+      </td>
+
+      <td>
+        <span *ngFor="let r of d.receiptResources; let last = last">
+          {{ r.quantity }}<span *ngIf="!last"><br /></span>
+        </span>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
+<p *ngIf="!loading && documents.length === 0">Документов нет.</p>
